sys/dev/aacraid/aacraid_cam.c
@@ -1017,8 +1017,8 @@ aac_cam_action(struct cam_sim *sim, union ccb *ccb)
 		cpi->version_num = 1;
 		cpi->target_sprt = 0;
 		cpi->hba_eng_cnt = 0;
-		cpi->max_target = camsc->inf->TargetsPerBus;
-		cpi->max_lun = 8;	/* Per the controller spec */
+		cpi->max_target = camsc->inf->TargetsPerBus - 1;
+		cpi->max_lun = 7;	/* Per the controller spec */
 		cpi->initiator_id = camsc->inf->InitiatorBusId;
 		cpi->bus_id = camsc->inf->BusNumber;
 #if __FreeBSD_version >= 800000
@@ -1389,15 +1389,9 @@ aacraid_startio(struct aac_softc *sc)
 		 * Try to get a command that's been put off for lack of
 		 * resources
 		 */
-		if (sc->flags & AAC_FLAGS_SYNC_MODE) {
-			/* sync. transfer mode */
-			if (sc->aac_sync_cm) 
-				break;
-			cm = aac_dequeue_ready(sc);
-			sc->aac_sync_cm = cm;
-		} else {
-			cm = aac_dequeue_ready(sc);
-		}
+		if ((sc->flags & AAC_FLAGS_SYNC_MODE) && sc->aac_sync_cm)
+			break;
+		cm = aac_dequeue_ready(sc);
 
 		/* nothing to do? */
 		if (cm == NULL)
